--- a/src/css/index.css
+++ b/src/css/index.css
@@ -25,8 +25,8 @@ body{
     margin: 30px;
 }
 .products ul li img.product{
-    width: 200px;
-    height: 250px;
+    width: 150px;
+    height: 150px;
     box-shadow: 2px 2px 4px #000000;
     cursor: pointer;
 }
@@ -52,6 +52,25 @@ border-bottom: 2px solid #000000;
     font-weight: 900;
     color: red;
    }
+/* Trash */
+
+img.delete{
+    width: 25px !important;
+    margin-bottom: 120px;
+    margin-left: 10px;
+    cursor: pointer;
+
+}
+
+
+
+/* edit */
+img.edit{
+    width: 25px !important;
+    margin-bottom: 90px;
+    margin-left: -25px;
+    cursor: pointer;
+}
 
 
    /* Main content */
@@ -110,25 +129,6 @@ div.form form{
 
 }
 
-/* Trash */
-
-img.delete{
-    width: 25px !important;
-    margin-bottom: 220px;
-    margin-left: 10px;
-    cursor: pointer;
-
-}
-
-
-
-/* edit */
-img.edit{
-    width: 25px !important;
-    margin-bottom: 180px;
-    margin-left: -25px;
-    cursor: pointer;
-}
 
 
 
@@ -187,4 +187,17 @@ cursor: pointer;
     display: flex;
     justify-content: space-evenly;
     
+}
+.orders .items img{
+    width: 100px;
+    height: 100px;
+
+    
+}
+.orders p{
+    padding: 30px 60px;
+    border: 1.5px solid #000000;
+}
+.orders .remove{
+    cursor: pointer;
 }
